deploy/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-descheduler-operator
