deploy/05_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: descheduler-operator
  namespace: openshift-kube-descheduler-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: descheduler-operator
  template:
    metadata:
      annotations:
        openshift.io/required-scc: restricted-v2
      labels:
        name: descheduler-operator
    spec:
      containers:
        - name: descheduler-operator
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          image: quay.io/openshift/origin-cluster-kube-descheduler-operator:latest
          terminationMessagePolicy: FallbackToLogsOnError
          ports:
          - containerPort: 8443
            name: https
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
          livenessProbe:
            httpGet:
              scheme: HTTPS
              port: 8443
              path: /healthz
            initialDelaySeconds: 45
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              scheme: HTTPS
              port: 8443
              path: /healthz
            initialDelaySeconds: 10
            timeoutSeconds: 10
          command:
          - cluster-kube-descheduler-operator
          args:
          - "operator"
          imagePullPolicy: Always
          volumeMounts:
          - name: tmp
            mountPath: "/tmp"
          - name: serving-cert
            mountPath: /var/run/secrets/serving-cert
            readOnly: true
      serviceAccountName: openshift-descheduler
      serviceAccount: openshift-descheduler
      volumes:
      - name: tmp
        emptyDir: {}
      - name: serving-cert
        secret:
          secretName: descheduler-operator-serving-cert
          optional: true
