deploy/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: descheduler-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: descheduler-operator
  template:
    metadata:
      labels:
        name: descheduler-operator
    spec:
      containers:
        - name: descheduler-operator
          image: docker.io/ravig/descheduler-operator:v0.0.7
          ports:
          - containerPort: 60000
            name: metrics
          command:
          - descheduler-operator
          imagePullPolicy: Always
      serviceAccountName: openshift-descheduler
      serviceAccount: openshift-descheduler
