deploy/08_networkpolicy_allow_operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: descheduler-operator-allow
  namespace: openshift-kube-descheduler-operator
spec:
  podSelector:
    matchLabels:
      name: descheduler-operator
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              openshift.io/cluster-monitoring: "true"
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-monitoring
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-user-workload-monitoring
      ports:
        - protocol: TCP
          port: 8443
  egress:
    - {}
  policyTypes:
    - Ingress
    - Egress
