deploy/09_networkpolicy_default_deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: descheduler-default-deny
  namespace: openshift-kube-descheduler-operator
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
